issue #171: Adjust template box style to avoid text overlapping
When using Kimchi in Portuguese (Brazil) the template box displayed distorted
because the brasilian word is longer than US one.
See: https://f.cloud.github.com/assets/4921718/1218592/f2b73ba2-26bc-11e3-87cb-d45e193af3df.png
So make the height box fits the size of its content.

--- a/ui/css/theme-default/template_list.css
+++ b/ui/css/theme-default/template_list.css
@@ -28,7 +28,7 @@
 	box-shadow: none;
 	color: #666666;
 	float: left;
-	height: 126px;
+	height: auto;
 	margin: 0 11px 10px 0;
 	padding: 10px;
 	width: 308px;
@@ -60,6 +60,7 @@
 	height: 18px;
 	line-height: 18px;
 	width: 142px;
+	display: table;
 }
 
 .white-box {
